fixed horizontal scroll bar bug

--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -1,6 +1,8 @@
 
 #root {
   height: 85vh;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 
 .header {
